--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtzgfNPGaUGfzLxmc3MQPpeoFBx6J_u61foz4d8k5i5jj_s8tG");
+	background: #99ccff
   font: 18px/1.4 #000000;
   color: $darkGray;
 }
