--- a/style.scss
+++ b/style.scss
@@ -18,8 +18,8 @@ html {
 }
 
 body {
-	background; #99ccff
-  font: 18px/1.4 #000000;
+	background: #99ccff
+  font; 18px/1.4 #000000;
   color: $darkGray;
 }
 
