--- a/style.scss
+++ b/style.scss
@@ -19,8 +19,8 @@ html {
 
 body {
 	background: #99ccff
-  font; 18px/1.4 #000000;
-  color: $darkGray;
+  font: 18px/1.4;
+  color: #000000;
 }
 
 .container {
